--- a/package.json
+++ b/package.json
@@ -4,22 +4,17 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "nodemon": "nodemon server.js",
-    "start": "npm install node server.js",
-    "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public, views'",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.1",
     "nunjucks": "^3.2.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.7",
     "npm-run-all": "^4.1.5"
   }
 }
